<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrueCycle</string>
    <string name="hello_world">True Cycle!</string>
    <string name="action_home">Home</string>
    <string name="action_about">About</string>
    <string name="action_contact">Contact</string>
    <string name="radio_kilogram">Kilograms</string>
    <string name="radio_pound">Pounds</string>
    <string name="radio_pro">Pro</string>
    <string name="radio_domPro">Domestic Pro</string>
    <string name="radio_cat1">Cat 1</string>
    <string name="radio_cat2">Cat 2</string>
    <string name="radio_cat3">Cat 3</string>
    <string name="radio_cat4">Cat 4</string>
    <string name="radio_cat5">Cat 5</string>
    <string name="radio_rec">Recreational</string>
    <string name="radio_5secMax">5 second max</string>
    <string name="radio_1minAvg">1 min avg</string>
    <string name="radio_5minAvg">5 min avg</string>
    <string name="radio_ft">functional threshold</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gender_weight">Gender / Weight</string>
    <string name="title_activity_category">Cycling Category</string>
    <string name="title_activity_effort">Cycling Effort</string>
    <string name="title_activity_watt_output">Watts</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_contact">Contact</string>

</resources>
