<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mcorbridge.truecycle.CategoryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView9"
        android:layout_below="@+id/imageView"
        android:layout_alignEnd="@+id/button3" />

    <RadioGroup
        android:id="@+id/radioGroupCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">

        <RadioButton
            android:id="@+id/radioPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_pro"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioDomPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_domPro"/>

        <RadioButton
            android:id="@+id/radioCat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_cat1" />

        <RadioButton
            android:id="@+id/radioCat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_cat2"/>

        <RadioButton
            android:id="@+id/radioCat3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_cat3" />

        <RadioButton
            android:id="@+id/radioCat4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_cat4"/>

        <RadioButton
            android:id="@+id/radioCat5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_cat5" />

        <RadioButton
            android:id="@+id/radioRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_rec"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="submit"
        android:id="@+id/button3"
        android:onClick="submitCategory"
        android:layout_below="@+id/radioGroupCategory"
        android:layout_alignStart="@+id/radioGroupCategory"
        android:layout_marginTop="39dp" />



</RelativeLayout>
