<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:src="@drawable/btn_back"
        android:onClick="doBack_from_show_effort"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="watts"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <RadioGroup
        android:id="@+id/radioGroupEffort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp">

        <RadioButton
            android:id="@+id/radioPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_5secMax"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioCat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_1minAvg" />

        <RadioButton
            android:id="@+id/radioCat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_5minAvg"/>

        <RadioButton
            android:id="@+id/radioCat3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_ft" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="submit"
        android:id="@+id/button3"
        android:onClick="doSubmitEffort"
        android:layout_marginTop="39dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>